--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>afterlife</title>
+    <title></title>
 </head>
 <body>
-    <h1>afterlife check2</h1>
+    <h1>afterlife check3</h1>
 </body>
 </html>
