--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
     <h1>afterlife check754678</h1>
 </body>
 </html>
+API_KEY: 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
